--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -33,6 +33,7 @@
             <a href="{% url 'setting' %}">Nimesh Basnet</a>
         </div>
     </header>
+    
     <main>
         <div class="main-container">
             <div class="site-main">
@@ -43,7 +44,7 @@
                         <li><a href="{% url 'menu' %}"><i class="fas fa-book"></i> Menu</a></li>
                         <li><a href="{% url 'order' %}"><i class="fas fa-receipt"></i> Order</a></li>
                         <li><a href="{% url 'about' %}"><i class="fa-solid fa-info-circle"></i> About Us</a></li>
-                        <li><a href="{% url 'setting' %}l"><i class="fas fa-cog"></i> Settings</a></li>
+                        <li><a href="{% url 'setting' %}"><i class="fas fa-cog"></i> Settings</a></li>
                     </ul>
                 </aside>
                 {% block content %}
