--- a/templates/student/setting.html
+++ b/templates/student/setting.html
@@ -8,7 +8,7 @@
 {% block search %}
 <div class="search-bar">
     <input type="text" placeholder="What do you want to eat today?">
-    <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
+    <i class="search-icon"><img src="images/search.svg" alt="search"></i>
 </div>
 {% endblock search %}
 
@@ -21,7 +21,7 @@
     <div class="edit-container">
         <h2>Edit Profile <span class="edit-icon"><img src="{% static 'images/edit.svg' %}"alt="edit"></span></h2>
         <div class="profile-photo">
-            <img src="{% static 'images/profile2.png' %}" alt="Profile Photo">
+            <img src="{% static 'images/profile.png' %}" alt="Profile Photo">
             <div class="photo-buttons">
                 <button class="add-photo">Add Photo</button>
                 <button class="remove-photo">Remove Photo</button>
@@ -30,16 +30,16 @@
         <form class="profile-form" method="POST">
             {% csrf_token %}
             <div class="input-group">
-                <input type="text" placeholder="David" required>
-                <input type="text" placeholder="Wittenberg" required>
+                <input type="text" placeholder="Nimesh" required>
+                <input type="text" placeholder="Basnet" required>
             </div>
             <div class="input-group">
-                <input type="email" placeholder="davidwittenberg99@gmail.com" required>
-                <input type="tel" placeholder="+819009723367" required>
+                <input type="email" placeholder="nemesh99@gmail.com" required>
+                <input type="tel" placeholder="980034342" required>
             </div>
             <div class="input-group">
-                <input type="text" placeholder="Washington DC" required>
-                <input type="text" placeholder="USA" required>
+                <input type="text" placeholder="Maitidevi" required>
+                <input type="text" placeholder="Nepal" required>
             </div>
             <div class="form-buttons">
                 <button type="button" class="discard-button">DISCARD</button>
