--- a/static/setting.css
+++ b/static/setting.css
@@ -8,18 +8,13 @@
 
 body {
     background-color: #F2780D;
-    border-radius: 40px;
 }
 
 .main-container {
-    padding: 0px;
+    margin: auto;
+    padding: 0;
     background-color: #fff;
     border-radius: 40px;
-}
-
-.site-main {
-    display: flex;
-    justify-content: space-between;
 }
 
 .header {
@@ -31,7 +26,28 @@ body {
 }
 
 .logo img {
-    width: 80%;
+    width: 85%;
+}
+
+.search-bar input {
+    width: 400px;
+    padding: 10px;
+    border-radius: 10px;
+    padding: 16px 0px 16px 70px;
+    background-color: #fff;
+    border: none;
+    position: relative;
+}
+
+.search-icon img {
+    width: 65%;
+    position: static;
+}
+
+.search-icon {
+    position: absolute;
+    top: 4.5%;
+    left: 37%;
 }
 
 .profile {
@@ -45,6 +61,7 @@ body {
 .profile img {
     width: 40px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 
 .profile a {
@@ -52,58 +69,48 @@ body {
     color: #fff;
 }
 
-.sidebar {
-    width: 14%;
+.site-main {
+    display: flex;
+    gap: 20px;
+}
+
+.slide {
+    width: 13%;
     height: 500px;
-    background-color: #fff;
-    border:2px solid #BFC0C0 ;
-    border-radius: 40px 0px 0px;
-    padding: 35px 0px 35px 35px;
+    background: #fff;
+    border: 2px solid #d9d9d9;
+    border-radius: 40px 0 0 0;
 }
 
-.sidebar h1 {
+h1 {
     color: #F2780D;
-    font-size: 20px;
-    font-weight: 400px;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+    margin: 5px 0px;
+    pointer-events: none;
 }
 
-.menu ul {
+ul li {
     list-style: none;
 }
 
-.menu ul li {
-    margin: 30px 0;
-}
-
-.menu ul li a {
+ul li a {
     color: #000;
+    padding: 20px 5px;
     text-decoration: none;
     font-size: 16px;
+    display: block;
 }
 
-.menu .menu-btn {
-    background-color: #F2780D;
-    padding: 5px;
+ul li:hover a {
+    color: #fff;
+    background: #F2780D;
 }
 
-.menu ul li:hover {
-    cursor: pointer;
-    background-color: #F2780D;
-    padding-left: 20px;
-}
-
-.icon {
-    margin-right: 15px;
-}
-
-.settings {
-    background-color: #F2780D;
-    padding: 5px;
-}
-
-.content {
-    flex: 1;
-    margin: 2%;
+ul li a i {
+    text-align: center;
+    width: 40px;
 }
 
 .logout-btn {
@@ -112,11 +119,12 @@ body {
     padding: 10px;
 }
 
-.logout-btn span {
+.logout-btn a {
     padding-right: 5px;
+    text-decoration: none;
 }
 
-.logout-btn span:hover {
+.logout-btn a:hover {
     text-decoration: underline;
     color: #F2780D;
     cursor: pointer;
@@ -124,21 +132,36 @@ body {
 
 h2 {
     text-align: start;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 10px;
 }
 
-.content span {
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+    padding: 20px 0 20px 10px;
+    border-radius: 40px;
+}
+
+.logout-btn a {
     font-size: 18px;
+    text-align: end;
+    color: #000;
+}
+
+.logout-btn a i {
+    padding: 5px;
 }
 
 .edit-container {
     background-color: #fff;
     border-radius: 15px;
     border: 1px solid #F2780D;
-    padding: 20px;
-    width: 100%;
+    padding: 40px 50px;
     border-radius: 40px;
-    padding: 20px 40px;
+    margin-bottom: 20px;
 }
 
 .profile-photo {
@@ -147,7 +170,8 @@ h2 {
 }
 
 .profile-photo img {
-    width: auto;
+    width: 15%;
+    height: 15%;
     border-radius: 50%;
     margin-bottom: 10px;
 }
@@ -242,4 +266,5 @@ h2 {
 .social-icons img {
     width: 100%;
     height: 24px;
+    margin: 5px;
 }
