--- a/templates/student/home.html
+++ b/templates/student/home.html
@@ -7,7 +7,7 @@
 {% block search %}
 <div class="search-bar">
     <input type="text" placeholder="What do you want to eat today?">
-    <i class="search-icon"><img src="images/search.svg" alt="search"></i>
+    <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
 </div>
 {% endblock search %}
 {% block content %}
@@ -75,7 +75,7 @@
         </div>
     </div>
     <a href="{% url 'menu' %}" class="view-more">View More</a>
-    <button class="order-now"><a href="menu.html">Order Now</a></button>
+    <button class="order-now"><a href="{% url 'menu' %}">Order Now</a></button>
 </section>
 </div>
 {% endblock content %}
