--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -9,8 +9,7 @@
 
 {% block search %}
 <div class="search-bar">
-    <input type="text" placeholder="What do you want to eat today?">
-    <i class="search-icon"><img src="{% static 'images/search.svg' %}" alt="search"></i>
+    <input type="text" placeholder="Search...">
 </div>
 <div class="profile-content">
     <div class="add-to-cart">
@@ -23,6 +22,7 @@
 {% endblock search %}
 
 {% block content %}
+<main>
 <div class="main-container">
     <div class="content">
         <div id="cart-popup" class="cart-count">
@@ -137,4 +137,5 @@
 </div>
 <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"></script>
     <script src="{% static 'js/index.js' %}"></script>
+</main>
 {% endblock content %}
