data populated on order page

--- a/templates/student/order.html
+++ b/templates/student/order.html
@@ -12,67 +12,26 @@
 {% block content %}
 <div class="container">
     <h2>Order Bill</h2>
-    <p class="order-number">Order #123</p>
-    <div class="item">
-        <img src="images/samosa2.jpg" alt="Samosa">
-        <div class="details">
-            <p>Samosa</p>
-            <span>August 1, 2024, 8:22 AM</span>
+    <p class="order-number">Order #{{order.order_number}}</p>
+    {% for order_item in order_items %}
+        <div class="item">
+            <img src="{{order_item.item.image.url}}" alt="{{order_item.item.name}}">
+            <div class="details">
+                <p>{{order_item.item.name}}</p>
+                <span>{{order_item.created_at}}</span>
+            </div>
+            <div class="price">Rs.<span class="item-price">{{order_item.item.price}}</span></div>
+            <div class="quantity">
+                <button class="decrease">−</button>
+                <input type="text" value="{{order_item.quantity}}" class="item-quantity" readonly>
+                <button class="increase">+</button>
+            </div>
         </div>
-        <div class="price">+Rs.<span class="item-price">100</span></div>
-        <div class="quantity">
-            <button class="decrease">−</button>
-            <input type="text" value="1" class="item-quantity" readonly>
-            <button class="increase">+</button>
-        </div>
-    </div>
-    <div class="item">
-        <img src="images/vegmomo.jpg" alt="Veg Momo">
-        <div class="details">
-            <p>Veg Momo</p>
-            <span>August 1, 2024, 8:23 AM</span>
-        </div>
-        <div class="price">+Rs.<span class="item-price">80</span></div>
-        <div class="quantity">
-            <button class="decrease">−</button>
-            <input type="text" value="1" class="item-quantity" readonly>
-            <button class="increase">+</button>
-        </div>
-    </div>
-
-    <div class="item">
-        <img src="images/aloochaat.jpg" alt="Aloo Chaat">
-        <div class="details">
-            <p>Aloo Chaat</p>
-            <span>August 1, 2024, 8:23 AM</span>
-        </div>
-        <div class="price">+Rs.<span class="item-price">50</span></div>
-        <div class="quantity">
-            <button class="decrease">−</button>
-            <input type="text" value="1" class="item-quantity" readonly>
-            <button class="increase">+</button>
-        </div>
-    </div>
-
-    <div class="item">
-        <img src="images/vegchowmein.jpg" alt="Veg Chowmein">
-        <div class="details">
-            <p>Veg Chowmein</p>
-            <span>August 1, 2024, 8:23 AM</span>
-        </div>
-        <div class="price">+Rs.<span class="item-price">160</span></div>
-        <div class="quantity">
-            <button class="decrease">−</button>
-            <input type="text" value="2" class="item-quantity" readonly>
-            <button class="increase">+</button>
-        </div>
-    </div>
-
+    {% endfor %}
     <div class="total">
         <p>Total:</p>
-        <p>Rs.<span id="total-price">390</span></p>
+        <p>Rs.<span id="total-price">{{order.get_total_price}}</span></p>
     </div>
 </div>
-<script src="{% static 'js/order.js' %}"></script>
 
 {% endblock content %}
