added increase decrease order item count in cart

--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -147,7 +147,7 @@
 </section>
 
 <div class="btn">
-    <button class="cart"><a href="order.html">GO TO CART</a></button>
+    <button class="cart"><a href='{% url 'order' %}'>GO TO CART</a></button>
 </div>
 </div>
 <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"></script>
