--- a/templates/student/order.html
+++ b/templates/student/order.html
@@ -14,24 +14,31 @@
     <h2>Order Bill</h2>
     <p class="order-number">Order #{{order.order_number}}</p>
     {% for order_item in order_items %}
-        <div class="item">
-            <img src="{{order_item.item.image.url}}" alt="{{order_item.item.name}}">
-            <div class="details">
-                <p>{{order_item.item.name}}</p>
-                <span>{{order_item.created_at}}</span>
-            </div>
-            <div class="price">Rs.<span class="item-price">{{order_item.item.price}}</span></div>
-            <div class="quantity">
-                <button class="decrease">−</button>
-                <input type="text" value="{{order_item.quantity}}" class="item-quantity" readonly>
-                <button class="increase">+</button>
-            </div>
+    <div class="item">
+        <img src="{{order_item.item.image.url}}" alt="{{order_item.item.name}}">
+        <div class="details">
+            <p>{{order_item.item.name}}</p>
+            <span>{{order_item.created_at}}</span>
         </div>
+        <div class="price">Rs.<span class="item-price">{{order_item.item.price}}</span></div>
+        <div class="quantity">
+            <button class="decrease">
+                <a href="{% url 'decrease_in_cart' order_item.id %}">-</a>
+            </button>
+            <input type="text" value="{{order_item.quantity}}" class="item-quantity" readonly>
+            <button class="increase">
+                <a href="{% url 'increase_in_cart' order_item.id %}">+</a>
+            </button>
+        </div>
+    </div>
     {% endfor %}
+  
+
     <div class="total">
         <p>Total:</p>
         <p>Rs.<span id="total-price">{{order.get_total_price}}</span></p>
     </div>
 </div>
+<script src="{% static 'js/order.js' %}"></script>
 
 {% endblock content %}
