show items count in cart icon

--- a/templates/student/menu.html
+++ b/templates/student/menu.html
@@ -15,7 +15,7 @@
     <div class="add-to-cart">
         <a class="cart" href="#" onclick="toggleCartPopup()">
             <i class="fas fa-shopping-cart"></i>
-            <span class="cart-count" id="cart-count">0</span>
+            <span class="cart-count" id="cart-count">{{order_items.count}}</span>
         </a>
     </div>
 </div>
