added canteen app

--- a/templates/canteen/about.html
+++ b/templates/canteen/about.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'base/canteenbase.html' %}
 {% load static %}
 {% block link %}
 <link rel="stylesheet" href="{% static 'about.css' %}">
